--- a/src/app/cards/card-list/card-list.component.html
+++ b/src/app/cards/card-list/card-list.component.html
@@ -1,5 +1,10 @@
 <div class="ui-g ui-fluid">
   <div class="ui-sm-10 ui-sm-offset-1 ui-md-10 ui-md-offset-1 ui-lg-8 ui-lg-offset-2 ui-xl-8 ui-xl-offset-2">
+    <div class="ui-g">
+      <div class="ui-g-12">
+        <h1 style="text-align:center">Card List: Select cards to build your deck!</h1>
+      </div>
+    </div>
     <p-card>
       <div class="ui-g">
         <div class="ui-sm-12 ui-g-10">
