--- a/src/app/cards/card/card.component.html
+++ b/src/app/cards/card/card.component.html
@@ -4,4 +4,4 @@
     <h6>(No Image Available)</h6>
   </div>
 </div>
-<input *ngIf="cardSelected" type="checkbox" class="center-check" checked>
+<input *ngIf="cardSelected" type="checkbox" class="center-check" checked (change)="click()">
