[app.component.html] increased margins just a little bit [app.module.ts] added the TooltipModule [card-list.component.html] added a tooltip

--- a/src/app/cards/card-list/card-list.component.html
+++ b/src/app/cards/card-list/card-list.component.html
@@ -2,7 +2,13 @@
   <div class="ui-sm-10 ui-sm-offset-1 ui-md-10 ui-md-offset-1 ui-lg-8 ui-lg-offset-2 ui-xl-8 ui-xl-offset-2">
     <div class="ui-g">
       <div class="ui-g-12">
-        <h1 style="text-align:center">Card List: Select cards to build your deck!</h1>
+        <h1 style="text-align:center; text-decoration:underline; margin-bottom:0">Card List:</h1>
+      </div>
+      <div class="ui-g-12">
+        <h3 style="text-align:center; margin-top:0">
+          Select cards to build your deck!
+          <i class="fa fa-info-circle" style="margin-left:5px" pTooltip="Click the deck icon in the top right corner to view your current selections!"></i>
+        </h3>
       </div>
     </div>
     <p-card>
