[app.component.html] added a description for cards in deck to the sidebar [app.component.ts] added cardDeckSize getter [app.module.ts] added TopNFilterPipe [card.service.ts] added cardDeckSize getter [card-list.component.html] added onChange to the dropdowns and a button to show more [card-list.component.ts] added topN and logic
NEW FILE:
-------------------------------
[top-n-filter.pipe.ts]

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,10 @@
   <p-sidebar [(visible)]="isDeckVis" [position]="'right'" [blockScroll]="true">
     <div class="ui-g">
       <div class="ui-g-12">
-        <h2>Current Deck List:</h2>
+        <h2 style="text-decoration:underline">Current Deck List:</h2>
+      </div>
+      <div *ngIf="deckSize > 0" class="ui-g-12">
+        <h4 style="margin:0">{{cardDeckSize}} non-character card(s) selected</h4>
       </div>
       <div *ngIf="deckSize === 0" class="ui-g-12">
         <h3>You have not selected any cards!</h3>
