--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,13 +44,38 @@ body {
 
 .ui-sidebar {
   overflow-y: auto;
+
+  .ui-sidebar-close {
+    color: gray !important;
+  }
+}
+
+a:hover {
+  color: blue !important;
 }
 
 .ui-toolbar {
   position: fixed;
   width: 100%;
+  max-height: 60px;
   z-index: 1;
   border-radius: 0 !important;
+
+  .ui-toolbar-group-left {
+    .ui-button {
+      float: left;
+      margin-top: 10px;
+      margin-right: 5px;
+    }
+  }
+
+  .ui-toolbar-group-right {
+    .ui-button {
+      float: left;
+      margin-top: 10px;
+      margin-right: 5px;
+    }
+  }
 }
 
 .red-minus {
@@ -59,4 +84,23 @@ body {
 
 .green-plus {
   color: green;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.navbar-logo {
+  width: auto;
+  height: 50px;
+}
+
+.sidebar-logo {
+  width: 100%;
+  height: 75px;
+}
+
+.navbar-text {
+  float: right;
+  margin: 5px 0px 0px 5px;
 }
