--- a/src/app/cards/sidebar-card/sidebar-card.component.html
+++ b/src/app/cards/sidebar-card/sidebar-card.component.html
@@ -1,4 +1,4 @@
-<h5 style="margin: 0">{{card.count}}x {{card.name}}
+<h5 style="margin: 0" class="text-center">x{{card.count}} {{card.name}}
   <i class="fa fa-minus red-minus" (click)="removeCard()"></i>
-  <i class="fa fa-plus green-plus" (click)="addCard()"></i>
+  <i *ngIf="!isPlot && !isBattlefield" class="fa fa-plus green-plus" (click)="addCard()"></i>
 </h5>
