--- a/src/app/cards/card-list/card-list.component.html
+++ b/src/app/cards/card-list/card-list.component.html
@@ -13,13 +13,13 @@
     </div>
     <p-card>
       <div class="ui-g">
-        <div class="ui-sm-12 ui-g-10">
+        <div class="ui-sm-12 ui-md-12 ui-lg-10 ui-xl-10">
           <span class="ui-float-label">
             <input id="float-input" type="text" size="30" pInputText [(ngModel)]="searchTerm">
             <label for="float-input">Search By: Name, Card Text, or Die Symbol</label>
           </span>
         </div>
-        <div class="ui-sm-12 ui-g-2 ui-fluid">
+        <div class="ui-sm-12 ui-md-6 ui-md-offset-3 ui-lg-2 ui-lg-offset-0 ui-xl-2 ui-xl-offset-0 ui-fluid">
           <button pButton label="Clear Filters" (click)="clearFilters()"></button>
         </div>
         <div class="ui-sm-12 ui-md-6 ui-lg-4 ui-xl-3">
